--- a/css/miniiad.css
+++ b/css/miniiad.css
@@ -78,6 +78,12 @@ dl {
 	border-radius: 100%;
 	border: 3px solid #eee;
 	box-sizing: content-box;
+	-webkit-filter: grayscale(30%);
+	filter: grayscale(30%);
+	transition: all .3s ease;
+}
+.staff_member_img:hover {
+	filter: grayscale(0%);
 }
 
 table.prtbl {
