Fixed mixed content warning

--- a/css/mb-comingsoon-iceberg.css
+++ b/css/mb-comingsoon-iceberg.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Iceberg&text=0123456789);
+@import url(//fonts.googleapis.com/css?family=Iceberg&text=0123456789);
 .counter-group {
   margin: 30px auto;
   display: inline-block;
