--- a/css/mb-comingsoon.css
+++ b/css/mb-comingsoon.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700&text=0123456789);
+@import url(//fonts.googleapis.com/css?family=Open+Sans+Condensed:700&text=0123456789);
 .counter-group {
   margin: 30px auto;
   display: inline-block;
