--- a/css/miniiad.css
+++ b/css/miniiad.css
@@ -2,9 +2,6 @@ h2 {
 	text-transform: uppercase;
 	font-size: 45px;
 }
-.intro-body {
-	background: rgba(255,255,255,0.6);
-}
 .intro .intro-text { margin: 0 !important }
 #share_buttons {
 	position: fixed;
@@ -20,11 +17,38 @@ dl {
 .share_button {
 	margin: 5px;
 }
+
 .brand-frame {
-  color: #333;
-	padding: 40px 0;
-	margin-bottom: 50px;
+  color: #fff;
+	padding: 70px 70px 0;
+	margin: 100px 0;
+	background: rgba(0,0,0,0.75);
+	border-radius: 5px;
 }
+.brand-heading {
+	border-bottom: 1px solid rgba(255,255,255,0.7);
+	padding-bottom: 60px;
+	margin: 0 0 15px;
+}
+.intro-text {
+	padding-bottom: 15px;
+	text-transform: uppercase;
+	font-size: 18px;
+	font-weight: 300;
+}
+@media (max-width: 767px) {
+	.brand-frame {
+		padding: 30px 30px 0;
+		margin: 50px 0;
+	}
+	.brand-heading {
+		padding-bottom: 30px;
+	}
+	.intro-text {
+		font-size: 14px;
+	}
+}
+
 .link-iscrizione {
 	background-color: rgba(0, 128, 0, 0.6);
 	border-radius: 15px;
