--- a/css/miniiad.css
+++ b/css/miniiad.css
@@ -186,7 +186,10 @@ td.prtd_lightning {
 }
 .sponsor-title {
 	height: 35px;
+	width: 300px;
 	margin: 80px 0 0;
+	max-width: 100%;
+	height: auto;
 }
 .sponsor-container {
 	margin-bottom: 80px;
@@ -197,7 +200,21 @@ td.prtd_lightning {
 }
 .sponsor-div img {
 	object-fit: contain;
-	max-width: 400px;
+	width: 400px;
+	max-height: 150px;
+	max-width: 100%;
+}
+.partner-title {
+	margin-top: 80px;
+	text-transform: uppercase;
+}
+.partner-div {
+	display: inline-block;
+	margin: 25px 25px 0;
+}
+.partner-div img {
+	object-fit: contain;
+	max-width: 150px;
 	max-height: 150px;
 }
 
