--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -15,12 +15,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 2em 0 .8em;
+  margin: 2em 0 0.8em;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   color: #009bc2;
 }
-h1{margin: .5em 0 .8em}
+h1 {
+  margin: 0.5em 0 0.8em;
+}
 p {
   margin: 0 0 25px;
   font-size: 18px;
@@ -98,7 +100,7 @@ a:focus {
     background: rgba(0, 170, 212, 0.85);
   }
   .navbar-custom.top-nav-collapse {
-    border-bottom: 1px solid #009BC2;
+    border-bottom: 1px solid #009bc2;
   }
 }
 .intro {
@@ -107,7 +109,7 @@ a:focus {
   height: auto;
   text-align: center;
   color: #444444;
-  background: url(../img/sede_pin.jpg) no-repeat bottom center scroll;
+  background: url(../img/ied.jpg) no-repeat bottom center scroll;
   background-color: #ffffff;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -280,5 +282,5 @@ body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 img.resp {
-    max-width: 100%
+  max-width: 100%;
 }
