--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -109,7 +109,7 @@ a:focus {
   height: auto;
   text-align: center;
   color: #444444;
-  background: url(../img/ied.jpg) no-repeat bottom center scroll;
+  background: url(../img/firenze.jpg) no-repeat bottom center scroll;
   background-color: #ffffff;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -123,7 +123,9 @@ a:focus {
   vertical-align: middle;
 }
 .brand-heading {
-  font-size: 40px;
+  color: antiquewhite;
+
+  font-size: 2em;
 }
 .intro-text {
   font-size: 18px;
@@ -134,7 +136,7 @@ a:focus {
     padding: 0;
   }
   .brand-heading {
-    font-size: 100px;
+    font-size: 3em;
   }
   .intro-text {
     font-size: 25px;
